# Powering-AI-Infrastructure-at-Scale

./: .env.development  .env.example  .env.prod  .env.prod.example  .env.prod.local  .env.production  .gitignore  2025-08-16-this-session-is-being-continued-from-a-previous-co.txt  ADDITIONAL_FEATURES_IMPLEMENTATION.md  ANALYTICS_DASHBOARD_TEST_RESULTS.md  API_README.md  API_SECURITY_FIXES_CRITICAL.md  ARCHITECTURE_ANALYSIS_SUMMARY.txt  AWS_EXTENDED_SERVICES_SUMMARY.md  AZURE_API_SUITE_IMPLEMENTATION.md  BRAND_DESIGN_GUIDE.md  BRAND_IMPLEMENTATION_COMPLETE.md  CACHING_QUICK_REFERENCE.md  CLEANUP_PLAN.md  CLOUD_API_SETUP.md  COMPLETE_REFERENCE.md  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPLIANCE_AGENT_IMPLEMENTATION.md  COMPLIANCE_ENGINE_IMPLEMENTATION_PLAN.md  COMPLIANCE_FEATURES_IMPLEMENTATION.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  COMPREHENSIVE_QA_REPORT_FULL_PROJECT.md  DEMO_README.md  DEPLOYMENT.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  FEATURES_FIX_GUIDE.md  GCP_EXTENDED_APIS_IMPLEMENTATION.md  INTELLIGENT_FORMS_IMPLEMENTATION.md  LICENSE  MVP_TESTING_SUMMARY.md  Makefile  OPENAI_INTEGRATION_README.md  PARALLEL_WORKFLOW_MIGRATION_COMPLETE.md  PERFORMANCE_SCALABILITY_SUMMARY.md  (+268 more)
.github/workflows/: ci-cd.yml  monitoring-alerts.yml  performance-test.yml  security-scan.yml
api/: app.py
api/routers/: forms.py
docs/: CLEANUP_SUMMARY.md  DATA_MIGRATION_GUIDE.md  ENVIRONMENT_CONFIGURATION.md  OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_OPERATIONS_GUIDE.md  SECURITY_IMPROVEMENTS_COMPLETE.md  SECURITY_PATTERNS.md  TROUBLESHOOTING_GUIDE.md  USER_DOCUMENTATION.md  advanced_resilience_implementation.md  caching_implementation.md  metrics_collection.md
docs/archive/: ADDITIONAL_FEATURES_STATUS.md  AI_ENGINEERING_ANALYSIS.md  AI_IMPROVEMENTS_IMPLEMENTED.md  AI_IMPROVEMENTS_IMPLEMENTED_SUMMARY.md  AI_PROMPT_CONTEXT_ENGINEERING_IMPROVEMENTS.md  AI_RECOMMENDATION_SYSTEM_EXPERT_ANALYSIS.md  AI_WORKFLOW_IMPROVEMENTS_COMPLETE.md  API_ENDPOINT_MAPPING.md  ASSESSMENT_CONTEXT_FIX.md  CHATBOT_ALL_MODES_ENHANCEMENT.md  CHATBOT_IMPROVEMENTS.md  CHATBOT_MODE_TESTING_RESULTS.md  CHATBOT_TEST_RESULTS.md  CODE_ISSUES_REPORT.md  COMPLETE_DEPLOYMENT_PACKAGE.md  DASHBOARD_MICROSERVICES_KPI_IMPROVEMENTS.md  DEPLOYMENT_WEEK_1_TO_4_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_OPTIMIZATIONS_COMPLETE.md  FULLSTACK_DEVELOPER_ANALYSIS.md  FULLSTACK_FIXES_IMPLEMENTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ML_RECOMMENDATION_SYSTEM_COMPLETE.md  ML_SYSTEM_DEPLOYMENT_COMPLETE.md  ML_SYSTEM_TEST_RESULTS.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_COMPONENT_REFACTORING_COMPLETE.md  PHASE_2_IMPLEMENTATION.md  RECOMMENDED_ACTIONS_FEATURE_COMPLETE.md  SECURITY_INTEGRATION_COMPLETE.md  SENIOR_DEVELOPER_ANALYSIS.md  WEEK_1_4_DEPLOYMENT_COMPLETE.md
frontend-react/: .npmrc  ADVANCED_UI_FEATURES_SUMMARY.md  Dockerfile  VISUALIZATION_README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  next.config.ts
frontend-react/public/: test-assessments.html  test-connection.html  test-login.html
frontend-react/src/: theme.ts
frontend-react/src/app/: globals.css  layout.tsx  page.tsx
frontend-react/src/components/: AdditionalFeatures.tsx  AdvancedReportExport.tsx  ApiTester.tsx  ApprovalWorkflows.tsx  AssessmentSelector.tsx  AuthInitializer.tsx  Breadcrumbs.tsx  BudgetForecasting.tsx  ChangeImpactAnalysis.tsx  ComplianceAutomation.tsx  ComplianceDashboard.tsx  ComprehensiveAnalyticsDashboard.tsx  EnhancedDashboardDemo.tsx  EnhancedNotificationSystem.tsx  ErrorBoundary.tsx  ErrorBoundaryWrapper.tsx  ExecutiveDashboard.tsx  (+41 more)
k8s/: api-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa-enhanced.yaml  hpa.yaml  ingress.yaml  mongodb-deployment.yaml  monitoring-deployment.yaml  namespace.yaml  redis-deployment.yaml  redis-monitoring.yaml  secrets-simple.yaml  secrets.yaml  vault-integration.yaml
nginx/: nginx.conf
redis/: redis.conf  sentinel.conf
scripts/: backup_restore.py  build-production.sh  create_dashboard_indexes.py  create_demo_data.py  deploy-k8s.sh  deploy.sh  dev-setup.sh  execute_production_migration.py  health-check.sh  init-mongo.js  migrate_data.py  setup-secrets.sh  simple_production_migration.py  test_assessment_workflow.py  test_progress_tracking.py  train_recommendation_model.py  validate-config.py  validate_data.py  validate_production_system.py  vault-config.hcl  vault-init.sh
src/infra_mind/: __init__.py  cli.py  error_handling.py  main.py
tests/: __init__.py  conftest.py  test_advanced_reporting.py  test_advanced_resilience.py  test_agent_orchestration.py  test_agent_workflow_integration.py  test_agents.py  test_ai_consultant_agent.py  test_auth.py  test_aws_extended_services.py  test_aws_integration.py  test_aws_production_integration.py  test_azure_extended_apis.py  test_azure_integration.py  test_cache.py  test_cloud_engineer_agent.py  test_compliance_agent.py  test_compliance_features.py  test_comprehensive_analytics.py  test_comprehensive_error_handling.py  test_cto_agent.py  test_data_migration.py  test_dependency_injection.py  test_end_to_end_workflows.py  test_enterprise_endpoints.py  test_enterprise_live_api.py  test_forms.py  test_foundation.py  test_gcp_integration.py  test_gcp_production_integration.py  test_gemini_integration.py  test_incident_response.py  test_infrastructure_agent.py  test_intelligent_features.py  test_llm_usage_optimization.py  test_load_testing.py  test_main.py  test_metrics_collection.py  test_metrics_integration.py  test_ml_recommendation_system.py  (+28 more)
(+344 files in other folders)
